--- a/zoo/index.html
+++ b/zoo/index.html
@@ -8,7 +8,7 @@
 <body>
   <a-scene>
     <!-- Cielo y ambiente -->
-    <a-sky color="#87CEEB"></a-sky>
+    <iframe src="https://skybox.blockadelabs.com/e/51abf3fa63d6c195ad38806bc7c6540d" width=700 height=700 style="border:0;" allow="fullscreen"></iframe>
     
     <!-- Iluminación -->
     <a-light type="ambient" color="#fff" intensity="0.8"></a-light>
