--- a/zoo/zoo-virtual/escena-habitat.html
+++ b/zoo/zoo-virtual/escena-habitat.html
@@ -8,7 +8,13 @@
 </head>
 <body>
   <a-scene background="color: #87CEEB">
-    
+          <a-scene>
+            <a-assets>
+              <img id="sky360"
+              src="https://backend.blockadelabs.com/api/v1/skybox/download/89f1d363cfaa8aa716e3959fccec0130.jpg">
+            </a-assets>
+          <a-sky src="#sky360"></a-sky>
+          </a-scene>
     <!-- Iluminación -->
     <a-light type="ambient" color="#BBB" intensity="0.8"></a-light>
     <a-light type="directional" color="#FFF" intensity="0.8" position="5 10 7"></a-light>
