--- a/zoo/zoo-virtual/index.html
+++ b/zoo/zoo-virtual/index.html
@@ -12,7 +12,7 @@
           <a-scene>
             <a-assets>
               <img id="sky360"
-              src="https://backend.blockadelabs.com/api/v1/skybox/download/0fe0045bb88d81132ec70ba2eea79e22.jpg">
+              src="./assets/360/zoo-entrance.jpg">
             </a-assets>
           <a-sky src="#sky360"></a-sky>
           </a-scene>
