--- a/zoo/index2.html
+++ b/zoo/index2.html
@@ -4,6 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Zoo Virtual Físico - Entrada</title>
+
+<style>
+    body {
+      margin: 0;
+      overflow: hidden;
+      font-family: 'Arial', sans-serif;
+    }
+    
+    /* Loader mientras carga */
+    .a-loader-title {
+      color: #00ffff !important;
+      font-size: 1.5em;
+    }
+  </style>
+
   <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.0.0/dist/aframe-extras.min.js"></script>
   <script src="https://unpkg.com/aframe-environment-component@1.3.2/dist/aframe-environment-component.min.js"></script>
@@ -13,8 +28,8 @@
   <a-scene fog="type: linear; color: #87CEEB; near: 10; far: 100">
     <a-assets>
       <!-- Texturas -->
-      <img id="grass" src="https://cdn.aframe.io/a-painter/images/floor.jpg" crossorigin="anonymous">
-      <img id="wood" src="https://cdn.glitch.global/341720a2-157f-4d6b-b2c1-40f26e3435c9/wood.jpg?v=1649794075048" crossorigin="anonymous">
+      <img id="grass" src="https://cdn.aframe.io/a-painter/images/floor.jpg" alt ="Grass Texture" crossorigin="anonymous">
+      <img id="wood" src="https://cdn.glitch.global/341720a2-157f-4d6b-b2c1-40f26e3435c9/wood.jpg?v=1649794075048" alt="wood Texture" crossorigin="anonymous">
       <img id="stone" src="https://cdn.glitch.global/341720a2-157f-4d6b-b2c1-40f26e3435c9/stone.jpg?v=1649794075048" crossorigin="anonymous">
       <img id="metal" src="https://cdn.glitch.global/341720a2-157f-4d6b-b2c1-40f26e3435c9/metal.jpg?v=1649794075048" crossorigin="anonymous">
       <img id="water" src="https://cdn.glitch.global/341720a2-157f-4d6b-b2c1-40f26e3435c9/water.jpg?v=1649794075048" crossorigin="anonymous">
@@ -336,18 +351,6 @@
     });
   </script>
 
-  <style>
-    body {
-      margin: 0;
-      overflow: hidden;
-      font-family: 'Arial', sans-serif;
-    }
-    
-    /* Loader mientras carga */
-    .a-loader-title {
-      color: #00ffff !important;
-      font-size: 1.5em;
-    }
-  </style>
+ 
 </body>
 </html>
